# upstream-ontologist-py

./: .yamllint  Cargo.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml  wheels.yaml
debian/: changelog  control  copyright  watch
debian/patches/: older-tokio  relax-futures  relax-tokio  series
debian/upstream/: metadata
py/upstream_ontologist/: __init__.py  _upstream_ontologist.pyi
src/: lib.rs
