[package]
name = "upstream-ontologist-py"
version = "0.2.11"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/jelmer/upstream-ontologist-py.git"
homepage = "https://github.com/jelmer/upstream-ontologist-py"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
upstream-ontologist = "0.3.15"
pyo3 = ">=0.27, <0.29"
pyo3-log = "0.13"
reqwest = { version = ">=0.11, <0.14", features=["blocking", "json"], default-features = false }
url = "2.5"
serde_json = "1"
log = "0.4"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
futures = "0.3.32"

[features]
default = []
extension-module = ["pyo3/extension-module"]
debcargo = ["upstream-ontologist/debcargo"]
